delete screenshots and documents when you will added їх

--- a/src/ZectranetBundle/Resources/views/dialogAdd.html.twig
+++ b/src/ZectranetBundle/Resources/views/dialogAdd.html.twig
@@ -13,7 +13,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 " style="width : 100%;">
-                            <div class="panel panel-cascade" ng-controller="DocumentsController" style="margin: 0;">
+                            <div class="panel panel-cascade"  style="margin: 0;">
                                 <div class="panel-body" style="margin: 0;border: 0;">
                                     <form id="upload" method="post" action="{{ path('zectranet_document_upload') }}" enctype="multipart/form-data">
                                         <div id="drop_upload">
