Select/Clear All functions

--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -253,7 +253,7 @@
                         <div id="tasks-tab-content" class="tab-content">
 
                             <!-- Begin of Task Table View -->
-                            <div id="table-view" class="tab-pane fade in active" aria-labelledby="task-view-table" role="tabpanel">
+                            <div id="table-view" style="min-height: 300px;" class="tab-pane fade in active" aria-labelledby="task-view-table" role="tabpanel">
                                 <ng-include src="{{ '\'' ~ asset('bundles/zectranet/templates/task-table.html') ~ '\'' }}"></ng-include>
                             </div>
                             <!-- End of Task Table View -->
