Поправил кнопку фильтра + переместил фильтр и добавил кнопку для операций такска

--- a/src/ZectranetBundle/Resources/views/filter.html.twig
+++ b/src/ZectranetBundle/Resources/views/filter.html.twig
@@ -1,5 +1,6 @@
 <div class="row" style="padding: 8px;">
     <div class="col-xs-12">
+        <i class="fa fa-filter"></i>
         <div class="btn-group" align="center">
             <!-- BEGIN OF FILTER BY PRIORITY -->
             <div class="btn-group">
