--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -208,6 +208,7 @@
             {% include '@Zectranet/projectAddEpicStory.html.twig' %}
             <!-- END OF EPIC STORY ADD MODAL -->
 
+
         <!-- Begin of Tasks -->
         <div class="row" ng-controller="TaskController">
             <div class="col-md-12">
@@ -243,7 +244,7 @@
                                     <i class="fa fa-plus fa-2x"></i>
                                 </a>
                             </li>
-                            <li>{% include '@Zectranet/filter.html.twig' %}</li>
+                            <li style="float: right !important;">{% include '@Zectranet/filter.html.twig' %}</li>
                         </ul>
                         <!-- End of Task Nav Tabs -->
 
