--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -34,7 +34,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Name:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Name:</label>
                                 </div>
                             </div>
 
@@ -51,7 +51,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Owner:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Owner:</label>
                                 </div>
                             </div>
 
@@ -69,7 +69,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Type:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Type:</label>
                                 </div>
                             </div>
 
@@ -94,7 +94,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Priority:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Priority:</label>
                                 </div>
                             </div>
 
@@ -119,7 +119,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Status:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Status:</label>
                                 </div>
                             </div>
 
@@ -144,7 +144,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Project/Epic Story:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Project/Epic Story:</label>
                                 </div>
                             </div>
 
@@ -204,7 +204,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Assigned:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Assigned:</label>
                                 </div>
                             </div>
 
@@ -243,7 +243,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted  form-control-static" style="  color: #A9A9A9;font-weight: 300;">Progress:</label>
+                                    <label class="text-muted  form-control-static" style="  color: #777;font-weight: 300;">Progress:</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -279,7 +279,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Estimated Hours:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Estimated Hours:</label>
                                 </div>
                             </div>
 
@@ -299,7 +299,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Estimated Minutes:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Estimated Minutes:</label>
                                 </div>
                             </div>
 
@@ -322,7 +322,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">Start Date:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">Start Date:</label>
                                 </div>
                             </div>
 
@@ -338,7 +338,7 @@
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
                                 <div class="input-group">
-                                    <label class="text-muted form-control-static" style="  color: #A9A9A9;font-weight: 300;">End Date:</label>
+                                    <label class="text-muted form-control-static" style="  color: #777;font-weight: 300;">End Date:</label>
                                 </div>
                             </div>
 
@@ -490,8 +490,8 @@
                     </div>
 
                     <div id="coments"  class="tab-pane fade" aria-labelledby="coments-tab" role="tabpanel"  ng-init="getPosts(0, 100)">
-                        <div style="overflow-y: auto;height: 500px; " id="posts-panel">
-                            <div class="coments" ng-repeat="post in posts">
+                        <div ng-style="{'height': (posts.length > 0) ? '500px' : '100px'}" style="overflow-y: auto;height: 500px; " id="posts-panel" >
+                            <div class="coments" ng-repeat="post in posts"  >
                                 <p style="margin-top: 25px;" ng-init="avatar = generateAsset(urlAsset, 'documents/' + post.user.avatar)">
                                     <a ng-init="Href = userHref(post.user.id)" ng-href="[[Href]]" style="display: inline-block; text-decoration: none;">
                                         <img style="width: 50px;height: 50px; object-fit: cover;" ng-src="[[avatar]]" alt="User Avatar" class="img-circle"/>
